--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>E-commerce web</title>
+    <script src="https://www.paypal.com/sdk/js?client-id=AUElyirxebVFvYz_NTs_1hsTnebHA-PgC63O9qM7ulQnlDtu4o92LMDYeV6-PQ-b9Kd4_cG4UQ7nQkRX"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
